Fix background gradient opacity in body styling for improved visibility

--- a/menu/static/menu/css/style.css
+++ b/menu/static/menu/css/style.css
@@ -5,7 +5,7 @@
 }
 
 body {
- background: linear-gradient(rgba(0, 0, 0, 0.5), rgba(0, 0, 0, 0.5)), url("../images/menu_background.jpg" )no-repeat center center fixed;
+ background: linear-gradient(0deg , rgba(0, 0, 0, 0.4), rgba(0, 0, 0, 0.4)), url("../images/menu_background.jpg" )no-repeat center center fixed;
   -webkit-background-size: cover;
   -moz-background-size: cover;
   -o-background-size: cover;
